--- a/facebookApp.html
+++ b/facebookApp.html
@@ -48,10 +48,10 @@
     <p>Current location :<span id="currLoc"></span></p>
     <p>Relationship status :<span id="relStatus"></span></p>
     <div class="row">
-    <p class="col-md-2 col-lg-2">Education :</p><p id="edu" class="col-md-10 col-lg-10"></p>
+    <p class="col-xs-12 col-sm-3 col-md-2 col-lg-2">Education :</p><p id="edu" class="col-xs-12 col-sm-9 col-md-10 col-lg-10"></p>
     </div>
     <div class="row">
-    <p class="col-md-2 col-lg-2">Work :</p><p id="work" class="col-md-10 col-lg-10"></p>
+    <p class="col-xs-12 col-sm-3 col-md-2 col-lg-2">Work :</p><p id="work" class="col-xs-12 col-sm-9 col-md-10 col-lg-10"></p>
     </div>
   </div>
 </div>
