--- a/facebookApp.html
+++ b/facebookApp.html
@@ -21,7 +21,7 @@
 
 <div class="jumbotron">
   <h1 style="color: #FAFAFA">MyFacebook App</h1>
-  <p>Close current page by clicking the button again</p>
+  <p><b>Close current page by clicking the button again</p>
   <p>...</p>
 
   
