--- a/facebookApp.html
+++ b/facebookApp.html
@@ -41,12 +41,18 @@
 <div class="collapse" id="collapseExample">
   <div class="well" style="text-align: left;">
   <div class="loader">Loading...</div>
+    <div class="row">
+    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" id="profilePic">
+    </div>
+    <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
     <p>Name :<span id="name"></span></p>
     <p>Email :<span id="email"></span></p>
     <p>Birthday :<span id="bday"></span></p>
     <p>Hometown :<span id="htown"></span></p>
     <p>Current location :<span id="currLoc"></span></p>
     <p>Relationship status :<span id="relStatus"></span></p>
+    </div>
+    </div>
     <div class="row">
     <p class="col-xs-12 col-sm-3 col-md-2 col-lg-2">Education :</p><p id="edu" class="col-xs-12 col-sm-9 col-md-10 col-lg-10"></p>
     </div>
